[project]
name = "hello-hermes-mcp"
version = "0.1.0"
description = "A friendly MCP server that greets you and tells you about Hermes Agent"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
hello-hermes-mcp = "hello_hermes_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_hermes_mcp"]
